syntax = "proto3";

import "google/protobuf/wrappers.proto";

package heimdall.types;

message UpdateAccountEvent {
  uint64 slot = 1;
  bytes pubkey = 2;
  uint64 lamports = 3;
  bytes owner = 4;
  bool executable = 5;
  uint64 rent_epoch = 6;
  bytes data = 7;
  uint64 write_version = 8;
  optional bytes txn_signature = 9;
}

message SlotStatusEvent {
  uint64 slot = 1;
  uint64 parent = 2;
  SlotStatus status = 3;
}

enum SlotStatus {
  Processed = 0;
  Rooted = 1;
  Confirmed = 2;
  FirstShredReceived = 3;
  Completed = 4;
  CreatedBank = 5;
  Dead = 0xDEAD;
}

message MessageHeader {
  uint32 num_required_signatures = 1;
  uint32 num_readonly_signed_accounts = 2;
  uint32 num_readonly_unsigned_accounts = 3;
}

message CompiledInstruction {
  uint32 program_id_index = 1;
  repeated uint32 accounts = 2;
  bytes data = 3;
}

message LoadedAddresses {
  repeated bytes writable = 1;
  repeated bytes readonly = 2;
}

message MessageAddressTableLookup {
  bytes account_key = 1;
  repeated uint32 writable_indexes = 2;
  repeated uint32 readonly_indexes = 3;
}

message V0Message {
  MessageHeader header = 1;
  repeated bytes account_keys = 2;
  bytes recent_block_hash = 3;
  repeated CompiledInstruction instructions = 4;
  repeated MessageAddressTableLookup address_table_lookup = 5;
}

message V0LoadedMessage {
  V0Message message_ = 1;
  LoadedAddresses loaded_adresses = 2;
  repeated bool is_writable_account_cache = 3;
}

message LegacyMessage {
  MessageHeader header = 1;
  repeated bytes account_keys = 2;
  bytes recent_block_hash = 3;
  repeated CompiledInstruction instructions = 4;
}

message LegacyLoadedMessage {
  LegacyMessage message_ = 1;
  repeated bool is_writable_account_cache = 2;
}

message SanitizedMessage {
  oneof message_payload {
    LegacyLoadedMessage legacy = 1;
    V0LoadedMessage v0 = 2;
  }
}

message SanitizedTransaction {
  SanitizedMessage message_ = 1;
  bytes message_hash = 2;
  bool is_simple_vote_transaction = 3;
  repeated bytes signatures = 4;
}

message InnerInstructions {
  uint32 index = 1;
  repeated InnerInstruction instructions = 2;
}

message InnerInstruction {
  CompiledInstruction instruction = 1;
  optional uint32 stack_height = 2;
}

message UiTokenAmount {
  google.protobuf.DoubleValue ui_amount = 1;
  uint32 decimals = 2;
  string amount = 3;
  string ui_amount_string = 4;
}

message TransactionTokenBalance {
  uint32 account_index = 1;
  string mint = 2;
  UiTokenAmount ui_token_account = 3;
  string owner = 4;
}

message Reward {
  string pubkey = 1;
  int64 lamports = 2;
  uint64 post_balance = 3;
  int32 reward_type = 4;
  uint32 commission = 5;
}

message TransactionStatusMeta {
  bool is_status_err = 1;
  string error_info = 2;
  uint64 fee = 3;
  repeated uint64 pre_balances = 4;
  repeated uint64 post_balances = 5;
  repeated InnerInstructions inner_instructions = 6;
  repeated string log_messages = 7;
  repeated TransactionTokenBalance pre_token_balances = 8;
  repeated TransactionTokenBalance post_token_balances = 9;
  repeated Reward rewards = 10;
}

message TransactionEvent {
  bytes signature = 1;
  bool is_vote = 2;
  SanitizedTransaction transaction = 3;
  TransactionStatusMeta transaction_status_meta = 4;
  uint64 slot = 5;
  uint64 index = 6;
}

message MessageWrapper {
  oneof event_message {
    UpdateAccountEvent account = 1;
    SlotStatusEvent slot = 2;
    TransactionEvent transaction = 3;
  }
}
